Correct misc formatting and syntax issues

--- a/install_apache.yaml
+++ b/install_apache.yaml
@@ -1,12 +1,12 @@
 ---
-- hosts: all
+- name: Install Apache
+  hosts: all
   become: true
   tasks:
 
-  - name: install apache2 and php
-    ansible.builtin.package:
-      name:
-        - "{{ apache_package }}"
-        - "{{ php_package }}"
-      state: latest
-      update_cache: yes
+    - name: Install apache2 and php packages
+      ansible.builtin.package:
+        name:
+          - "{{ apache_package }}"
+          - "{{ php_package }}"
+        update_cache: true
