--- a/remove_apache.yaml
+++ b/remove_apache.yaml
@@ -1,18 +1,19 @@
 ---
-- hosts: all
+- name: Remove Apache
+  hosts: all
   become: true
   tasks:
 
-  - name: update repository index
-    ansible.builtin.apt:
-      update_cache: yes
+    - name: Update repository index
+      ansible.builtin.apt:
+        update_cache: true
 
-  - name: remove apache2 package
-    ansible.builtin.apt:
-      name: apache2
-      state: absent
+    - name: Remove apache2 package
+      ansible.builtin.apt:
+        name: apache2
+        state: absent
 
-  - name: remove support for php
-    ansible.builtin.apt:
-      name: libapache2-mod-php
-      state: absent
+    - name: Remove support for php
+      ansible.builtin.apt:
+        name: libapache2-mod-php
+        state: absent
