Add plays to site.yaml

--- a/site.yaml
+++ b/site.yaml
@@ -21,13 +21,50 @@
   hosts: web_servers
   become: true
   tasks:
-    - name: Install apache
+    - name: Install apache on Ubuntu
       tags: apache, ubuntu
       ansible.builtin.apt:
         name:
           - apache2
           - libapache2-mod-php
       when: ansible_distribution == "Ubuntu"
+
+    - name: Install Apache on Fedora
+      tags: apache, fedora
+      ansible.builtin.dnf:
+        name:
+          - httpd
+      when: ansible_distribution == "Fedora"
+
+    - name: Ensure Apache is running on Ubuntu
+      tags: apache, ubuntu
+      ansible.builtin.service:
+        name: apache2
+        state: started
+      when: ansible_distribution == "Ubuntu"
+
+    - name: Ensure Apache is running on Fedora
+      tags: apache, fedora
+      ansible.builtin.service:
+        name: httpd
+        state: started
+      when: ansible_distribution == "Fedora"
+
+    - name: Change admin email address
+      tags: apache, fedora
+      ansible.builtin.lineinfile:
+        path: /etc/httpd/conf/httpd.conf
+        regexp: "^ServerAdmin" # Look for line that starts with ServerAdmin
+        line: ServerAdmin somebody@somewhere.net
+      when: ansible_distribution == "Fedora"
+      register: httpd
+
+    - name: Restart httpd on Fedora
+      tags: apache, fedora
+      ansible.builtin.service:
+        name: httpd
+        state: restarted
+      when: httpd.changed
 
     - name: Copy html file to web server
       tags: apache, ubuntu
@@ -45,5 +82,6 @@
   tasks:
     - name: Install mariadb
       ansible.builtin.dnf:
-        name: mariadb
+        name:
+          - mariadb
       when: ansible_distribution == "Fedora"
