Add templates for SSH

--- a/host_vars/192.168.99.201.yml
+++ b/host_vars/192.168.99.201.yml
@@ -1,3 +1,5 @@
 # Fedora Server VM Udemy-Ansible-Fedora-02
 apache_package: httpd
 apache_service: httpd
+passwd_auth: no
+ssh_template_file: sshd_conf_fedora.j2
