Add gearlingguy.apache role

--- a/site.yml
+++ b/site.yml
@@ -30,7 +30,7 @@
     - db_servers
 
 - name: Apply web server configuration
-  hosts: web_servers
+  hosts: apache
   become: true
   roles:
-    - web_servers
+    - geerlingguy.apache
